# olluigi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
olluigi/: chunking.py  git.py  main.py  ollama.py  pipelines.py  utils.py
tests/: test_file.txt  test_split_chunking.py
